<resources>
    <string name="app_name">玩Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>

    <string name="go_login">去登录</string>
    <string name="nav_grade">等级:</string>
    <string name="nav_rank">排名:</string>

    <string name="nav_score">我的积分</string>
    <string name="nav_collection">我的收藏</string>
    <string name="nav_share">我的分享</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_setting">系统设置</string>
    <string name="nav_logout">退出登录</string>

    <!--    MainActivity底部导航-->
    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="wechat">公众号</string>
    <string name="knowledge_system">体系</string>
    <string name="project">项目</string>

    <string name="navigation">导航</string>


    <!--    home-->
    <string name="top_tip">顶置</string>
    <string name="article_fresh">新</string>

    <!--    menu Action-->
    <string name="action_search">搜索</string>
    <string name="action_add">新增</string>
    
    <!--    login activity-->
    <string name="user_login">用户登录</string>
    <string name="user_tip">请使用WanAndroid账号登录！</string>
    <string name="hint_login_user">用户名</string>
    <string name="hint_login_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>

    <string name="logout_success">已退出登录</string>

    <!--    setting-->
    <string name="setting">设置</string>
    <string name="basic_setting">基础设置</string>
    <string name="switch_photo_mode_title">无图模式</string>
    <string name="switch_photo_mode_summary">开启后在非Wifi环境下不加载图片</string>
    <string name="switch_show_top_article_title">是否开启首页顶置文章</string>
    <string name="switch_show_top_article_summary">开启后将显示首页顶置文章</string>
    <string name="auto_night_mode">自动切换夜间模式</string>
    <string name="auto_night_mode_summary">设置切换的时间</string>

    <string name="other_setting">其他设置</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">自定义主题颜色</string>
    <string name="nav_bar_coloration">导航栏着色</string>
    <string name="nav_bar_coloration_summary">导航栏颜色跟随主题颜色</string>
    <string name="clear_cache">清除缓存</string>
    <string name="scan_code_download">扫码下载</string>
    <string name="scan_share_tip">好用的话推荐给你的小伙伴吧</string>

    <string name="about_settings">关于</string>
    <string name="version">版本</string>
    <string name="current_version">当前版本&#160;</string>
    <string name="official_website">官方网站</string>
    <string name="official_website_url">https://www.wanandroid.com</string>
    <string name="theme_color">主题颜色</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="custom">自定义</string>
    <string name="auto_night_mode_subsummary">重启App生效</string>
    <string name="auto_night_category">时间</string>
    <string name="night_mode_start">夜间模式开始时间</string>
    <string name="auto_day_mode">日间模式开始时间</string>


    <string name="action_share">分享</string>
    <string name="action_like">收藏</string>
    <string name="action_browser">浏览器打开</string>
</resources>
