<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_20"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/common_color"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_tip"
            android:layout_marginTop="@dimen/dp_8"
            android:textSize="@dimen/sp_16"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/dp_36"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_login_user"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginBottom="@dimen/sp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/dp_10"
            >

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_login_password"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:background="@drawable/bg_btn_login"
            android:textColor="@color/White"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_20"
            />
    </LinearLayout>

</LinearLayout>