<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dp_2"
    app:cardElevation="@dimen/dp_2"
    app:cardBackgroundColor="@color/viewBackground">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        >

        <TextView
            android:id="@+id/tvArticleTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_tip"
            android:background="@drawable/bg_square"
            android:paddingLeft="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:paddingTop="@dimen/dp_2"
            android:paddingBottom="@dimen/dp_2"
            android:textSize="@dimen/sp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/Red"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/tvArticleFresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article_fresh"
            android:background="@drawable/bg_square"
            android:paddingLeft="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:paddingTop="@dimen/dp_2"
            android:paddingBottom="@dimen/dp_2"
            android:layout_toRightOf="@id/tvArticleTop"
            android:textSize="@dimen/sp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/Red"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/tvArticleTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/app_name"
            android:background="@drawable/bg_tag"
            android:paddingLeft="@dimen/dp_4"
            android:paddingRight="@dimen/dp_4"
            android:paddingTop="@dimen/dp_2"
            android:paddingBottom="@dimen/dp_2"
            android:layout_toRightOf="@id/tvArticleFresh"
            android:textSize="@dimen/sp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/tvArticleAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/app_name"
            android:textSize="@dimen/sp_12"
            android:layout_toRightOf="@id/tvArticleTag"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_alignBaseline="@id/tvArticleTop"
            android:textColor="@color/item_date"
            />


        <TextView
            android:id="@+id/tvArticleData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/app_name"
            android:textSize="@dimen/sp_12"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_alignBaseline="@id/tvArticleTop"
            android:textColor="@color/item_date"
            />

        <ImageView
            android:id="@+id/ivArticleThumbnail"
            android:layout_width="@dimen/item_img_width"
            android:layout_height="@dimen/item_img_height"
            android:layout_below="@id/tvArticleAuthor"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/tvArticleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvArticleAuthor"
            android:layout_toRightOf="@id/ivArticleThumbnail"
            android:paddingBottom="@dimen/dp_6"
            android:ellipsize="end"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="start|top"
            android:maxLines="2"
            android:textSize="@dimen/sp_16"
            android:lineSpacingExtra="@dimen/dp_2"
            android:textColor="@color/item_title"
            />
        
        <TextView
            android:id="@+id/tvArticleChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvArticleTitle"
            android:layout_toRightOf="@id/ivArticleThumbnail"
            android:layout_alignParentBottom="true"
            android:textColor="@color/item_chapter"
            android:textSize="@dimen/sp_12"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            tools:text="@string/app_name"
            android:gravity="center"
            />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            >

            <ImageView
                android:id="@+id/ivLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like_not"
                />

        </LinearLayout>

    </RelativeLayout>



</androidx.cardview.widget.CardView>